compilers/src/y.output
   0  $accept : program $end

   1  program : PROGRAMnum IDnum SEMInum class_decls

   2  class_decls : class_decl
   3              | class_decls class_decl

   4  class_decl : CLASSnum IDnum class_body

   5  class_body : LBRACEnum RBRACEnum
   6             | LBRACEnum decls RBRACEnum
   7             | LBRACEnum decls method_decls RBRACEnum
   8             | LBRACEnum method_decls RBRACEnum

   9  decls : DECLARATIONSnum field_decls ENDDECLARATIONSnum
  10        | DECLARATIONSnum ENDDECLARATIONSnum

  11  field_decls : field_decl
  12              | field_decls field_decl

  13  field_decl : type var_decl

  14  var_decl : var_decl_id EQUALnum variable_initializer SEMInum
  15           | var_decl_id SEMInum
  16           | var_decl_id COMMAnum var_decl
  17           | var_decl_id EQUALnum variable_initializer COMMAnum var_decl

  18  var_decl_id : IDnum braces
  19              | IDnum

  20  variable_initializer : expression
  21                       | array_init
  22                       | array_creation

  23  array_init : LBRACEnum variable_init_list RBRACEnum

  24  variable_init_list : variable_initializer
  25                     | variable_init_list COMMAnum variable_initializer

  26  array_creation : INTnum array_expr

  27  array_expr : LBRACnum expression RBRACnum
  28             | array_expr LBRACnum expression RBRACnum

  29  method_decls : method_decl
  30               | method_decls method_decl

  31  method_decl : METHODnum type IDnum LPARENnum params RPARENnum block
  32              | METHODnum type IDnum LPARENnum RPARENnum block
  33              | METHODnum VOIDnum IDnum LPARENnum params RPARENnum block
  34              | METHODnum VOIDnum IDnum LPARENnum RPARENnum block

  35  params : INTnum identifier_list
  36         | VALnum INTnum identifier_list SEMInum params
  37         | VALnum INTnum identifier_list
  38         | INTnum identifier_list SEMInum params

  39  identifier_list : IDnum
  40                  | identifier_list COMMAnum IDnum

  41  block : decls statement_list
  42        | statement_list

  43  type : INTnum
  44       | INTnum braces
  45       | INTnum braces DOTnum type
  46       | IDnum
  47       | IDnum braces
  48       | IDnum braces DOTnum type

  49  braces : LBRACnum RBRACnum
  50         | braces LBRACnum RBRACnum

  51  statement_list : LBRACEnum statement_inner RBRACEnum

  52  statement_inner : statement
  53                  | statement_inner SEMInum statement

  54  statement : assign_stmt
  55            | method_call_stmt
  56            | return_stmt
  57            | if_stmt
  58            | while_stmt
  59            |

  60  assign_stmt : variable ASSGNnum expression

  61  method_call_stmt : variable LPARENnum RPARENnum
  62                   | variable LPARENnum indece_expr RPARENnum

  63  return_stmt : RETURNnum expression
  64              | RETURNnum

  65  if_stmt : IFnum expression statement_list
  66          | IFnum expression statement_list ELSEnum statement_list
  67          | IFnum expression statement_list ELSEnum if_stmt

  68  while_stmt : WHILEnum expression statement_list

  69  variable : IDnum
  70           | IDnum selection

  71  selection : LBRACnum indece_expr RBRACnum
  72            | DOTnum IDnum
  73            | DOTnum IDnum selection
  74            | LBRACnum indece_expr RBRACnum selection

  75  indece_expr : expression
  76              | expression COMMAnum indece_expr

  77  expression : simple_expression
  78             | simple_expression LTnum simple_expression
  79             | simple_expression LEnum simple_expression
  80             | simple_expression EQnum simple_expression
  81             | simple_expression NEnum simple_expression
  82             | simple_expression GEnum simple_expression
  83             | simple_expression GTnum simple_expression

  84  simple_expression : optional_plus_minus term
  85                    | optional_plus_minus term other_term

  86  optional_plus_minus :
  87                      | PLUSnum
  88                      | MINUSnum

  89  other_term : PLUSnum term
  90             | MINUSnum term
  91             | ORnum term
  92             | other_term other_term

  93  term : factor
  94       | factor other_factor

  95  other_factor : TIMESnum factor
  96               | DIVIDEnum factor
  97               | ANDnum factor
  98               | other_factor other_factor

  99  factor : SCONSTnum
 100         | ICONSTnum
 101         | variable
 102         | method_call_stmt
 103         | LPARENnum expression RPARENnum
 104         | NOTnum factor

state 0
	$accept : . program $end  (0)

	PROGRAMnum  shift 1
	.  error

	program  goto 2


state 1
	program : PROGRAMnum . IDnum SEMInum class_decls  (1)

	IDnum  shift 3
	.  error


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : PROGRAMnum IDnum . SEMInum class_decls  (1)

	SEMInum  shift 4
	.  error


state 4
	program : PROGRAMnum IDnum SEMInum . class_decls  (1)

	CLASSnum  shift 5
	.  error

	class_decls  goto 6
	class_decl  goto 7


state 5
	class_decl : CLASSnum . IDnum class_body  (4)

	IDnum  shift 8
	.  error


state 6
	program : PROGRAMnum IDnum SEMInum class_decls .  (1)
	class_decls : class_decls . class_decl  (3)

	CLASSnum  shift 5
	$end  reduce 1

	class_decl  goto 9


state 7
	class_decls : class_decl .  (2)

	.  reduce 2


state 8
	class_decl : CLASSnum IDnum . class_body  (4)

	LBRACEnum  shift 10
	.  error

	class_body  goto 11


state 9
	class_decls : class_decls class_decl .  (3)

	.  reduce 3


state 10
	class_body : LBRACEnum . RBRACEnum  (5)
	class_body : LBRACEnum . decls RBRACEnum  (6)
	class_body : LBRACEnum . decls method_decls RBRACEnum  (7)
	class_body : LBRACEnum . method_decls RBRACEnum  (8)

	DECLARATIONSnum  shift 12
	METHODnum  shift 13
	RBRACEnum  shift 14
	.  error

	decls  goto 15
	method_decls  goto 16
	method_decl  goto 17


state 11
	class_decl : CLASSnum IDnum class_body .  (4)

	.  reduce 4


state 12
	decls : DECLARATIONSnum . field_decls ENDDECLARATIONSnum  (9)
	decls : DECLARATIONSnum . ENDDECLARATIONSnum  (10)

	ENDDECLARATIONSnum  shift 18
	IDnum  shift 19
	INTnum  shift 20
	.  error

	field_decls  goto 21
	field_decl  goto 22
	type  goto 23


state 13
	method_decl : METHODnum . type IDnum LPARENnum params RPARENnum block  (31)
	method_decl : METHODnum . type IDnum LPARENnum RPARENnum block  (32)
	method_decl : METHODnum . VOIDnum IDnum LPARENnum params RPARENnum block  (33)
	method_decl : METHODnum . VOIDnum IDnum LPARENnum RPARENnum block  (34)

	IDnum  shift 19
	INTnum  shift 20
	VOIDnum  shift 24
	.  error

	type  goto 25


state 14
	class_body : LBRACEnum RBRACEnum .  (5)

	.  reduce 5


state 15
	class_body : LBRACEnum decls . RBRACEnum  (6)
	class_body : LBRACEnum decls . method_decls RBRACEnum  (7)

	METHODnum  shift 13
	RBRACEnum  shift 26
	.  error

	method_decls  goto 27
	method_decl  goto 17


state 16
	class_body : LBRACEnum method_decls . RBRACEnum  (8)
	method_decls : method_decls . method_decl  (30)

	METHODnum  shift 13
	RBRACEnum  shift 28
	.  error

	method_decl  goto 29


state 17
	method_decls : method_decl .  (29)

	.  reduce 29


state 18
	decls : DECLARATIONSnum ENDDECLARATIONSnum .  (10)

	.  reduce 10


state 19
	type : IDnum .  (46)
	type : IDnum . braces  (47)
	type : IDnum . braces DOTnum type  (48)

	LBRACnum  shift 30
	IDnum  reduce 46

	braces  goto 31


state 20
	type : INTnum .  (43)
	type : INTnum . braces  (44)
	type : INTnum . braces DOTnum type  (45)

	LBRACnum  shift 30
	IDnum  reduce 43

	braces  goto 32


state 21
	decls : DECLARATIONSnum field_decls . ENDDECLARATIONSnum  (9)
	field_decls : field_decls . field_decl  (12)

	ENDDECLARATIONSnum  shift 33
	IDnum  shift 19
	INTnum  shift 20
	.  error

	field_decl  goto 34
	type  goto 23


state 22
	field_decls : field_decl .  (11)

	.  reduce 11


state 23
	field_decl : type . var_decl  (13)

	IDnum  shift 35
	.  error

	var_decl  goto 36
	var_decl_id  goto 37


state 24
	method_decl : METHODnum VOIDnum . IDnum LPARENnum params RPARENnum block  (33)
	method_decl : METHODnum VOIDnum . IDnum LPARENnum RPARENnum block  (34)

	IDnum  shift 38
	.  error


state 25
	method_decl : METHODnum type . IDnum LPARENnum params RPARENnum block  (31)
	method_decl : METHODnum type . IDnum LPARENnum RPARENnum block  (32)

	IDnum  shift 39
	.  error


state 26
	class_body : LBRACEnum decls RBRACEnum .  (6)

	.  reduce 6


state 27
	class_body : LBRACEnum decls method_decls . RBRACEnum  (7)
	method_decls : method_decls . method_decl  (30)

	METHODnum  shift 13
	RBRACEnum  shift 40
	.  error

	method_decl  goto 29


state 28
	class_body : LBRACEnum method_decls RBRACEnum .  (8)

	.  reduce 8


state 29
	method_decls : method_decls method_decl .  (30)

	.  reduce 30


state 30
	braces : LBRACnum . RBRACnum  (49)

	RBRACnum  shift 41
	.  error


state 31
	type : IDnum braces .  (47)
	type : IDnum braces . DOTnum type  (48)
	braces : braces . LBRACnum RBRACnum  (50)

	DOTnum  shift 42
	LBRACnum  shift 43
	IDnum  reduce 47


state 32
	type : INTnum braces .  (44)
	type : INTnum braces . DOTnum type  (45)
	braces : braces . LBRACnum RBRACnum  (50)

	DOTnum  shift 44
	LBRACnum  shift 43
	IDnum  reduce 44


state 33
	decls : DECLARATIONSnum field_decls ENDDECLARATIONSnum .  (9)

	.  reduce 9


state 34
	field_decls : field_decls field_decl .  (12)

	.  reduce 12


state 35
	var_decl_id : IDnum . braces  (18)
	var_decl_id : IDnum .  (19)

	LBRACnum  shift 30
	EQUALnum  reduce 19
	SEMInum  reduce 19
	COMMAnum  reduce 19

	braces  goto 45


state 36
	field_decl : type var_decl .  (13)

	.  reduce 13


state 37
	var_decl : var_decl_id . EQUALnum variable_initializer SEMInum  (14)
	var_decl : var_decl_id . SEMInum  (15)
	var_decl : var_decl_id . COMMAnum var_decl  (16)
	var_decl : var_decl_id . EQUALnum variable_initializer COMMAnum var_decl  (17)

	EQUALnum  shift 46
	SEMInum  shift 47
	COMMAnum  shift 48
	.  error


state 38
	method_decl : METHODnum VOIDnum IDnum . LPARENnum params RPARENnum block  (33)
	method_decl : METHODnum VOIDnum IDnum . LPARENnum RPARENnum block  (34)

	LPARENnum  shift 49
	.  error


state 39
	method_decl : METHODnum type IDnum . LPARENnum params RPARENnum block  (31)
	method_decl : METHODnum type IDnum . LPARENnum RPARENnum block  (32)

	LPARENnum  shift 50
	.  error


state 40
	class_body : LBRACEnum decls method_decls RBRACEnum .  (7)

	.  reduce 7


state 41
	braces : LBRACnum RBRACnum .  (49)

	.  reduce 49


state 42
	type : IDnum braces DOTnum . type  (48)

	IDnum  shift 19
	INTnum  shift 20
	.  error

	type  goto 51


state 43
	braces : braces LBRACnum . RBRACnum  (50)

	RBRACnum  shift 52
	.  error


state 44
	type : INTnum braces DOTnum . type  (45)

	IDnum  shift 19
	INTnum  shift 20
	.  error

	type  goto 53


state 45
	var_decl_id : IDnum braces .  (18)
	braces : braces . LBRACnum RBRACnum  (50)

	LBRACnum  shift 43
	EQUALnum  reduce 18
	SEMInum  reduce 18
	COMMAnum  reduce 18


state 46
	var_decl : var_decl_id EQUALnum . variable_initializer SEMInum  (14)
	var_decl : var_decl_id EQUALnum . variable_initializer COMMAnum var_decl  (17)
	optional_plus_minus : .  (86)

	INTnum  shift 54
	LBRACEnum  shift 55
	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	variable_initializer  goto 58
	expression  goto 59
	array_init  goto 60
	array_creation  goto 61
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 47
	var_decl : var_decl_id SEMInum .  (15)

	.  reduce 15


state 48
	var_decl : var_decl_id COMMAnum . var_decl  (16)

	IDnum  shift 35
	.  error

	var_decl  goto 64
	var_decl_id  goto 37


state 49
	method_decl : METHODnum VOIDnum IDnum LPARENnum . params RPARENnum block  (33)
	method_decl : METHODnum VOIDnum IDnum LPARENnum . RPARENnum block  (34)

	INTnum  shift 65
	RPARENnum  shift 66
	VALnum  shift 67
	.  error

	params  goto 68


state 50
	method_decl : METHODnum type IDnum LPARENnum . params RPARENnum block  (31)
	method_decl : METHODnum type IDnum LPARENnum . RPARENnum block  (32)

	INTnum  shift 65
	RPARENnum  shift 69
	VALnum  shift 67
	.  error

	params  goto 70


state 51
	type : IDnum braces DOTnum type .  (48)

	.  reduce 48


state 52
	braces : braces LBRACnum RBRACnum .  (50)

	.  reduce 50


state 53
	type : INTnum braces DOTnum type .  (45)

	.  reduce 45


state 54
	array_creation : INTnum . array_expr  (26)

	LBRACnum  shift 71
	.  error

	array_expr  goto 72


state 55
	array_init : LBRACEnum . variable_init_list RBRACEnum  (23)
	optional_plus_minus : .  (86)

	INTnum  shift 54
	LBRACEnum  shift 55
	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	variable_initializer  goto 73
	expression  goto 59
	array_init  goto 60
	array_creation  goto 61
	variable_init_list  goto 74
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 56
	optional_plus_minus : MINUSnum .  (88)

	.  reduce 88


state 57
	optional_plus_minus : PLUSnum .  (87)

	.  reduce 87


state 58
	var_decl : var_decl_id EQUALnum variable_initializer . SEMInum  (14)
	var_decl : var_decl_id EQUALnum variable_initializer . COMMAnum var_decl  (17)

	SEMInum  shift 75
	COMMAnum  shift 76
	.  error


state 59
	variable_initializer : expression .  (20)

	.  reduce 20


state 60
	variable_initializer : array_init .  (21)

	.  reduce 21


state 61
	variable_initializer : array_creation .  (22)

	.  reduce 22


state 62
	expression : simple_expression .  (77)
	expression : simple_expression . LTnum simple_expression  (78)
	expression : simple_expression . LEnum simple_expression  (79)
	expression : simple_expression . EQnum simple_expression  (80)
	expression : simple_expression . NEnum simple_expression  (81)
	expression : simple_expression . GEnum simple_expression  (82)
	expression : simple_expression . GTnum simple_expression  (83)

	GTnum  shift 77
	NEnum  shift 78
	EQnum  shift 79
	GEnum  shift 80
	LEnum  shift 81
	LTnum  shift 82
	RBRACnum  reduce 77
	RPARENnum  reduce 77
	SEMInum  reduce 77
	COMMAnum  reduce 77
	LBRACEnum  reduce 77
	RBRACEnum  reduce 77


state 63
	simple_expression : optional_plus_minus . term  (84)
	simple_expression : optional_plus_minus . term other_term  (85)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	term  goto 90
	factor  goto 91


state 64
	var_decl : var_decl_id COMMAnum var_decl .  (16)

	.  reduce 16


state 65
	params : INTnum . identifier_list  (35)
	params : INTnum . identifier_list SEMInum params  (38)

	IDnum  shift 92
	.  error

	identifier_list  goto 93


state 66
	method_decl : METHODnum VOIDnum IDnum LPARENnum RPARENnum . block  (34)

	DECLARATIONSnum  shift 12
	LBRACEnum  shift 94
	.  error

	decls  goto 95
	block  goto 96
	statement_list  goto 97


state 67
	params : VALnum . INTnum identifier_list SEMInum params  (36)
	params : VALnum . INTnum identifier_list  (37)

	INTnum  shift 98
	.  error


state 68
	method_decl : METHODnum VOIDnum IDnum LPARENnum params . RPARENnum block  (33)

	RPARENnum  shift 99
	.  error


state 69
	method_decl : METHODnum type IDnum LPARENnum RPARENnum . block  (32)

	DECLARATIONSnum  shift 12
	LBRACEnum  shift 94
	.  error

	decls  goto 95
	block  goto 100
	statement_list  goto 97


state 70
	method_decl : METHODnum type IDnum LPARENnum params . RPARENnum block  (31)

	RPARENnum  shift 101
	.  error


state 71
	array_expr : LBRACnum . expression RBRACnum  (27)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	expression  goto 102
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 72
	array_creation : INTnum array_expr .  (26)
	array_expr : array_expr . LBRACnum expression RBRACnum  (28)

	LBRACnum  shift 103
	SEMInum  reduce 26
	COMMAnum  reduce 26
	RBRACEnum  reduce 26


state 73
	variable_init_list : variable_initializer .  (24)

	.  reduce 24


state 74
	array_init : LBRACEnum variable_init_list . RBRACEnum  (23)
	variable_init_list : variable_init_list . COMMAnum variable_initializer  (25)

	COMMAnum  shift 104
	RBRACEnum  shift 105
	.  error


state 75
	var_decl : var_decl_id EQUALnum variable_initializer SEMInum .  (14)

	.  reduce 14


state 76
	var_decl : var_decl_id EQUALnum variable_initializer COMMAnum . var_decl  (17)

	IDnum  shift 35
	.  error

	var_decl  goto 106
	var_decl_id  goto 37


state 77
	expression : simple_expression GTnum . simple_expression  (83)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	simple_expression  goto 107
	optional_plus_minus  goto 63


state 78
	expression : simple_expression NEnum . simple_expression  (81)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	simple_expression  goto 108
	optional_plus_minus  goto 63


state 79
	expression : simple_expression EQnum . simple_expression  (80)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	simple_expression  goto 109
	optional_plus_minus  goto 63


state 80
	expression : simple_expression GEnum . simple_expression  (82)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	simple_expression  goto 110
	optional_plus_minus  goto 63


state 81
	expression : simple_expression LEnum . simple_expression  (79)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	simple_expression  goto 111
	optional_plus_minus  goto 63


state 82
	expression : simple_expression LTnum . simple_expression  (78)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	simple_expression  goto 112
	optional_plus_minus  goto 63


state 83
	variable : IDnum .  (69)
	variable : IDnum . selection  (70)

	DOTnum  shift 113
	LBRACnum  shift 114
	ANDnum  reduce 69
	ASSGNnum  reduce 69
	GTnum  reduce 69
	LPARENnum  reduce 69
	NEnum  reduce 69
	ORnum  reduce 69
	RBRACnum  reduce 69
	RPARENnum  reduce 69
	SEMInum  reduce 69
	COMMAnum  reduce 69
	DIVIDEnum  reduce 69
	EQnum  reduce 69
	GEnum  reduce 69
	LBRACEnum  reduce 69
	LEnum  reduce 69
	LTnum  reduce 69
	MINUSnum  reduce 69
	PLUSnum  reduce 69
	RBRACEnum  reduce 69
	TIMESnum  reduce 69

	selection  goto 115


state 84
	factor : LPARENnum . expression RPARENnum  (103)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	expression  goto 116
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 85
	factor : ICONSTnum .  (100)

	.  reduce 100


state 86
	factor : NOTnum . factor  (104)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	factor  goto 117


state 87
	factor : SCONSTnum .  (99)

	.  reduce 99


state 88
	factor : method_call_stmt .  (102)

	.  reduce 102


state 89
	method_call_stmt : variable . LPARENnum RPARENnum  (61)
	method_call_stmt : variable . LPARENnum indece_expr RPARENnum  (62)
	factor : variable .  (101)

	LPARENnum  shift 118
	ANDnum  reduce 101
	GTnum  reduce 101
	NEnum  reduce 101
	ORnum  reduce 101
	RBRACnum  reduce 101
	RPARENnum  reduce 101
	SEMInum  reduce 101
	COMMAnum  reduce 101
	DIVIDEnum  reduce 101
	EQnum  reduce 101
	GEnum  reduce 101
	LBRACEnum  reduce 101
	LEnum  reduce 101
	LTnum  reduce 101
	MINUSnum  reduce 101
	PLUSnum  reduce 101
	RBRACEnum  reduce 101
	TIMESnum  reduce 101


state 90
	simple_expression : optional_plus_minus term .  (84)
	simple_expression : optional_plus_minus term . other_term  (85)

	ORnum  shift 119
	MINUSnum  shift 120
	PLUSnum  shift 121
	GTnum  reduce 84
	NEnum  reduce 84
	RBRACnum  reduce 84
	RPARENnum  reduce 84
	SEMInum  reduce 84
	COMMAnum  reduce 84
	EQnum  reduce 84
	GEnum  reduce 84
	LBRACEnum  reduce 84
	LEnum  reduce 84
	LTnum  reduce 84
	RBRACEnum  reduce 84

	other_term  goto 122


state 91
	term : factor .  (93)
	term : factor . other_factor  (94)

	ANDnum  shift 123
	DIVIDEnum  shift 124
	TIMESnum  shift 125
	GTnum  reduce 93
	NEnum  reduce 93
	ORnum  reduce 93
	RBRACnum  reduce 93
	RPARENnum  reduce 93
	SEMInum  reduce 93
	COMMAnum  reduce 93
	EQnum  reduce 93
	GEnum  reduce 93
	LBRACEnum  reduce 93
	LEnum  reduce 93
	LTnum  reduce 93
	MINUSnum  reduce 93
	PLUSnum  reduce 93
	RBRACEnum  reduce 93

	other_factor  goto 126


state 92
	identifier_list : IDnum .  (39)

	.  reduce 39


state 93
	params : INTnum identifier_list .  (35)
	params : INTnum identifier_list . SEMInum params  (38)
	identifier_list : identifier_list . COMMAnum IDnum  (40)

	SEMInum  shift 127
	COMMAnum  shift 128
	RPARENnum  reduce 35


state 94
	statement_list : LBRACEnum . statement_inner RBRACEnum  (51)
	statement : .  (59)

	IDnum  shift 83
	WHILEnum  shift 129
	IFnum  shift 130
	RETURNnum  shift 131
	SEMInum  reduce 59
	RBRACEnum  reduce 59

	statement_inner  goto 132
	statement  goto 133
	assign_stmt  goto 134
	method_call_stmt  goto 135
	return_stmt  goto 136
	if_stmt  goto 137
	while_stmt  goto 138
	variable  goto 139


state 95
	block : decls . statement_list  (41)

	LBRACEnum  shift 94
	.  error

	statement_list  goto 140


state 96
	method_decl : METHODnum VOIDnum IDnum LPARENnum RPARENnum block .  (34)

	.  reduce 34


state 97
	block : statement_list .  (42)

	.  reduce 42


state 98
	params : VALnum INTnum . identifier_list SEMInum params  (36)
	params : VALnum INTnum . identifier_list  (37)

	IDnum  shift 92
	.  error

	identifier_list  goto 141


state 99
	method_decl : METHODnum VOIDnum IDnum LPARENnum params RPARENnum . block  (33)

	DECLARATIONSnum  shift 12
	LBRACEnum  shift 94
	.  error

	decls  goto 95
	block  goto 142
	statement_list  goto 97


state 100
	method_decl : METHODnum type IDnum LPARENnum RPARENnum block .  (32)

	.  reduce 32


state 101
	method_decl : METHODnum type IDnum LPARENnum params RPARENnum . block  (31)

	DECLARATIONSnum  shift 12
	LBRACEnum  shift 94
	.  error

	decls  goto 95
	block  goto 143
	statement_list  goto 97


state 102
	array_expr : LBRACnum expression . RBRACnum  (27)

	RBRACnum  shift 144
	.  error


state 103
	array_expr : array_expr LBRACnum . expression RBRACnum  (28)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	expression  goto 145
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 104
	variable_init_list : variable_init_list COMMAnum . variable_initializer  (25)
	optional_plus_minus : .  (86)

	INTnum  shift 54
	LBRACEnum  shift 55
	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	variable_initializer  goto 146
	expression  goto 59
	array_init  goto 60
	array_creation  goto 61
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 105
	array_init : LBRACEnum variable_init_list RBRACEnum .  (23)

	.  reduce 23


state 106
	var_decl : var_decl_id EQUALnum variable_initializer COMMAnum var_decl .  (17)

	.  reduce 17


state 107
	expression : simple_expression GTnum simple_expression .  (83)

	.  reduce 83


state 108
	expression : simple_expression NEnum simple_expression .  (81)

	.  reduce 81


state 109
	expression : simple_expression EQnum simple_expression .  (80)

	.  reduce 80


state 110
	expression : simple_expression GEnum simple_expression .  (82)

	.  reduce 82


state 111
	expression : simple_expression LEnum simple_expression .  (79)

	.  reduce 79


state 112
	expression : simple_expression LTnum simple_expression .  (78)

	.  reduce 78


state 113
	selection : DOTnum . IDnum  (72)
	selection : DOTnum . IDnum selection  (73)

	IDnum  shift 147
	.  error


state 114
	selection : LBRACnum . indece_expr RBRACnum  (71)
	selection : LBRACnum . indece_expr RBRACnum selection  (74)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	expression  goto 148
	indece_expr  goto 149
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 115
	variable : IDnum selection .  (70)

	.  reduce 70


state 116
	factor : LPARENnum expression . RPARENnum  (103)

	RPARENnum  shift 150
	.  error


state 117
	factor : NOTnum factor .  (104)

	.  reduce 104


state 118
	method_call_stmt : variable LPARENnum . RPARENnum  (61)
	method_call_stmt : variable LPARENnum . indece_expr RPARENnum  (62)
	optional_plus_minus : .  (86)

	RPARENnum  shift 151
	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	expression  goto 148
	indece_expr  goto 152
	simple_expression  goto 62
	optional_plus_minus  goto 63


state 119
	other_term : ORnum . term  (91)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	term  goto 153
	factor  goto 91


state 120
	other_term : MINUSnum . term  (90)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	term  goto 154
	factor  goto 91


state 121
	other_term : PLUSnum . term  (89)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	term  goto 155
	factor  goto 91


state 122
	simple_expression : optional_plus_minus term other_term .  (85)
	other_term : other_term . other_term  (92)

	ORnum  shift 119
	MINUSnum  shift 120
	PLUSnum  shift 121
	GTnum  reduce 85
	NEnum  reduce 85
	RBRACnum  reduce 85
	RPARENnum  reduce 85
	SEMInum  reduce 85
	COMMAnum  reduce 85
	EQnum  reduce 85
	GEnum  reduce 85
	LBRACEnum  reduce 85
	LEnum  reduce 85
	LTnum  reduce 85
	RBRACEnum  reduce 85

	other_term  goto 156


state 123
	other_factor : ANDnum . factor  (97)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	factor  goto 157


state 124
	other_factor : DIVIDEnum . factor  (96)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	factor  goto 158


state 125
	other_factor : TIMESnum . factor  (95)

	IDnum  shift 83
	LPARENnum  shift 84
	ICONSTnum  shift 85
	NOTnum  shift 86
	SCONSTnum  shift 87
	.  error

	method_call_stmt  goto 88
	variable  goto 89
	factor  goto 159


state 126
	term : factor other_factor .  (94)
	other_factor : other_factor . other_factor  (98)

	ANDnum  shift 123
	DIVIDEnum  shift 124
	TIMESnum  shift 125
	GTnum  reduce 94
	NEnum  reduce 94
	ORnum  reduce 94
	RBRACnum  reduce 94
	RPARENnum  reduce 94
	SEMInum  reduce 94
	COMMAnum  reduce 94
	EQnum  reduce 94
	GEnum  reduce 94
	LBRACEnum  reduce 94
	LEnum  reduce 94
	LTnum  reduce 94
	MINUSnum  reduce 94
	PLUSnum  reduce 94
	RBRACEnum  reduce 94

	other_factor  goto 160


state 127
	params : INTnum identifier_list SEMInum . params  (38)

	INTnum  shift 65
	VALnum  shift 67
	.  error

	params  goto 161


state 128
	identifier_list : identifier_list COMMAnum . IDnum  (40)

	IDnum  shift 162
	.  error


state 129
	while_stmt : WHILEnum . expression statement_list  (68)
	optional_plus_minus : .  (86)

	MINUSnum  shift 56
	PLUSnum  shift 57
	IDnum  reduce 86
	LPARENnum  reduce 86
	ICONSTnum  reduce 86
	NOTnum  reduce 86
	SCONSTnum  reduce 86

	expression  goto 163
	simple_expression  goto 62
	optional_plus_minus  goto 63

